<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_45"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="226dp"
            android:layout_height="142dp"
            android:layout_marginLeft="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNDeportivoS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/tvN_Deportivo"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNDeportivoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintNDeportivo"
                android:inputType="textPersonName" />
        </LinearLayout>


        <ImageView
            android:id="@+id/ivFotoScoutingS"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ramos_50px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/etNombre"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="center"
                android:hint="@string/hintNombre"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvApellidosS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvApellidos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etApellidosS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintApellidos"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEdadS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvEdad"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEdadS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="center"
                android:hint="@string/hintEdad"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAlturaS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvAltura"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAlturaS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintAltura"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPesoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvPeso"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPesoS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="center"
                android:hint="@string/hintPeso"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPDominanteS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvPDominante"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPDominanteS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintPDominante"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDemarcacionHS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvDHabitual"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDemarcacionHS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="center"
                android:hint="@string/hintDHabitualS"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDemarcacionSS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvDSecundaria"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDemarcacionS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintDSecundariaS"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLesionesS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvLesiones"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLesionesS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="center"
                android:hint="@string/tvLesiones"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDemarcacionS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/tvEquipoS"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEquipoPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hitnEquipo"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvListaSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/tvTipoJugador"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:gravity="center" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="@dimen/standard_21"
            android:src="@android:drawable/checkbox_on_background"
            app:backgroundTint="@color/principal"
            app:fabCustomSize="@dimen/standard_45" />

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>